# talent-plan

./: README.md
rust/project1/: README.md
rust/project1/kvs/: Cargo.toml
rust/project1/kvs/src/: kv.rs  lib.rs
rust/project1/kvs/tests/: tests.rs
rust/project2/: README.md
rust/project2/kvs/: Cargo.toml
rust/project2/kvs/src/: error.rs  kv.rs  lib.rs
tidb/mapreduce/: README.md  mapreduce.go  urltop10.go
tidb/mergesort/: README.md  mergesort.go
